<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBD7A2"
    android:clickable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connected to Broker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/connectionStatusImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/connectionStatus"
        app:layout_constraintTop_toTopOf="@id/connectionStatus"
        app:layout_constraintBottom_toBottomOf="@id/connectionStatus"
        android:src="@drawable/state_connected"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/headingMsgPayload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_msg_payload"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewMsgPayload"
        app:layout_constraintEnd_toStartOf="@+id/textViewNumMsgs"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintRight_toLeftOf="@id/editTextMsgPayload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectionStatus"
        app:layout_constraintVertical_bias="0.69" />

    <EditText
        android:id="@+id/editTextMsgPayload"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:hint="@string/message_payload"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewMsgPayload"
        app:layout_constraintTop_toBottomOf="@+id/textViewMsgPayload" />

    <TextView
        android:id="@+id/headingNumRxMsgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages_received"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewMsgPayload"
        app:layout_constraintEnd_toStartOf="@+id/textViewNumMsgs"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/headingMsgPayload"
        app:layout_constraintTop_toBottomOf="@id/connectionStatus"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/textViewNumMsgs"
        android:layout_width="24dp"
        android:layout_height="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewMsgPayload"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectionStatus"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/textViewMsgPayload"
        android:layout_width="322dp"
        android:layout_height="360dp"
        android:background="@drawable/border"
        android:backgroundTint="#D9F8B6"
        android:gravity="bottom"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectionStatus"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/editTextSubTopic"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:hint="@string/subscribe_to_topic"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:text="@string/battery_status_topic"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextPubTopic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewMsgPayload"
        app:layout_constraintTop_toBottomOf="@+id/editTextMsgPayload" />

    <EditText
        android:id="@+id/editTextPubTopic"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:hint="@string/publish_to_topic"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:text="@string/battery_status_topic"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextSubTopic"
        app:layout_constraintEnd_toEndOf="@+id/editTextMsgPayload"
        app:layout_constraintTop_toBottomOf="@+id/editTextMsgPayload" />

    <Button
        android:id="@+id/btnPub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_color"
        android:text="@string/publish"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPubTopic"
        app:layout_constraintStart_toStartOf="@+id/editTextPubTopic"
        app:layout_constraintTop_toBottomOf="@+id/editTextPubTopic" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_color"
        android:text="@string/subscribe"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextSubTopic"
        app:layout_constraintStart_toStartOf="@+id/editTextSubTopic"
        app:layout_constraintTop_toBottomOf="@+id/editTextSubTopic" />

    <Button
        android:id="@+id/btnConnectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn_color"
        android:text="Disconnect"
        app:layout_constraintEnd_toEndOf="@id/btnSub"
        app:layout_constraintStart_toStartOf="@id/btnSub"
        app:layout_constraintTop_toBottomOf="@id/btnSub" />

    <Button
        android:id="@+id/btnAutomatePublishing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn_color"
        android:text="Automate \n Publishing"
        app:layout_constraintEnd_toEndOf="@id/btnPub"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="@id/btnPub"
        app:layout_constraintTop_toBottomOf="@id/btnPub" />

    <Button
        android:id="@+id/checkConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn_color"
        android:text="Check Connection"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/btnPub"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="@id/btnAutomatePublishing"
        app:layout_constraintTop_toBottomOf="@id/btnAutomatePublishing" />

</androidx.constraintlayout.widget.ConstraintLayout>